--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,11 @@
     <title> Aula 4 </title>
   </head>
   
-  <body>
-    
-  </body>
+   <body>
+     <form>
+          <input type="text">
+          <input type="password">
+          <input type="button"> 
+     </form>
+   </body>
 </html>
