--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
   
    <body>
      <form>
-          <input type="text">
-          <input type="password">
-          <input type="button"> 
+          <p>
+            Login: <input type="text">
+          </p>
+          <p>
+            Senha: <input type="password">
+          </p>
+          <p>
+             Endereço: <input type="text">
+          </p>
+          <p>
+             Cidade: <input type="text">
+          </p>
+          <p>
+             Estado: <input type="text">
+          </p>
+          <input type="button" value="Entrar"> 
      </form>
    </body>
 </html>
